# angel-portfolio-gpui

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
backend/: .env  Cargo.toml
backend/migrations/: 20250101000001_initial_schema.sql  20250101000002_seed_data.sql
backend/src/: auth.rs  config.rs  main.rs  main_old.rs
backend/src/db/: mod.rs  models.rs  pool.rs
backend/src/routes/: auth.rs  inventory.rs  mod.rs  orders.rs  products.rs
backend/src/services/: inventory.rs  mod.rs  orders.rs  products.rs
backend/tests/: integration_test.rs
frontend/: Cargo.toml
frontend/src/: api.rs  main.rs  main_old.rs  receipt.rs  state.rs
shared/: Cargo.toml
shared/src/: constants.rs  errors.rs  lib.rs  types.rs
shared/tests/: types_test.rs
src/: main.rs
