[package]
name = "trezza-terminal-backend"
version = "0.1.0"
edition = "2021"
description = "TREZZA TERMINAL Backend - Axum-based API server"

[[bin]]
name = "trezza-terminal-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "migrate"] }

# Shared workspace dependencies
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Shared crate
shared = { path = "../shared" }

# Additional backend-specific dependencies
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["typed-header"] }